# etfpack

./: .editorconfig  Cargo.toml
src/: lib.rs  packing.rs  utils.rs
src/structs/: atom.rs  mod.rs  port.rs
src/terms/: atom.rs  float.rs  integer.rs  mod.rs  port.rs  small_integer.rs  string.rs
src/utils/: mod.rs
