[package]
name = "etfpack"
description = "Convert to and from the binary ETF format."
repository = "https://www.github.com/andre4ik3/etfpack"
authors = ["andre4ik3 <andre4ik3@fastmail.com>"]
license = "Apache-2.0"
rust-version = "1.60"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
flate2 = "1.0"
